# Homemade-Tiny-OS

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
docs/: doc-tree.md  git-workflow.md  phase-1-项目骨架与测试基线.md  phase-2-可扩展虚拟磁盘与块设备.md  phase-3-虚拟文件系统与元数据索引.md  phase-4-进程调度-shell与系统内省.md  phase-5-可靠性权限与可扩展能力.md  project-tree.md  tasks.md  tiny-os-prd.md
scripts/: 01-basic-filesystem.py  02-persistence-recovery.py  03-scheduler-and-shell.py  04-observability.py  05-permissions-and-reliability.py  06-full-demo.py  _common.py  run-all.py
src/tinyos/: __init__.py  config.py  errors.py
src/tinyos/kernel/: __init__.py  process.py  scheduler.py
src/tinyos/observability/: __init__.py  stats.py
src/tinyos/shell/: __init__.py  parser.py  repl.py
src/tinyos/storage/: __init__.py  disk.py
src/tinyos/vfs/: __init__.py  directory_entry.py  filesystem.py  inode.py  path.py
src/tinyos/vfs/index/: __init__.py  interface.py  memory_adapter.py  sorted_adapter.py
tests/: __init__.py
tests/e2e/: __init__.py  test_actual_run_flow.py
tests/integration/: __init__.py  test_phase5_shell_behaviors.py  test_runtime_integration.py  test_shell_commands.py
tests/unit/: __init__.py  test_config.py  test_directory_index.py  test_disk.py  test_errors.py  test_imports.py  test_inode.py  test_observability.py  test_path.py  test_phase5_reliability.py  test_scheduler.py  test_shell_parser.py  test_skeletons.py  test_vfs.py
